# java_ee_last

./: .gitignore  Caddyfile  dump.rdb
backend/: build.gradle  pom.xml
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: cart.actions.ts  product.actions.ts  reviews.actions.ts
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/flashSales/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: category-card.tsx  compact-product-card.tsx  expandable-content.tsx  featured-product-card.tsx  flash-sale-card.tsx  flash-sale-detail.tsx  flash-sale-view.tsx  footer.tsx  generic-modal.tsx  product-card.tsx  product-view.tsx  search-view.tsx  spinner.tsx  star-rating.tsx
frontend/components/cart/: cart-item.tsx  cart-sheet.tsx  cart-view.tsx  change-quantity-button.tsx  delete-button.tsx
frontend/components/filters/: category-facet.tsx  facet.tsx  facets-content.tsx  facets-desktop.tsx  facets-mobile.tsx  hide-filters.tsx  hits-section.tsx  pagination-section.tsx  price-facet.tsx  rating-facet.tsx  sorter.tsx
frontend/components/icons/: user-home-icon.tsx
frontend/components/modals/: review-modal.tsx  search-modal.tsx
frontend/components/navigation-bar/: autocomplete.tsx  cart.tsx  favorites.tsx  navigation-bar.tsx  navigation-item.tsx  (+3 more)
frontend/lib/: auth.ts
frontend/stores/: add-product-store.ts  cart-store.ts  user-info-store.ts
frontend/types/: index.ts
frontend/utils/: demo-utils.ts  opt-in.ts
image_services/: main.py  pyproject.toml
过程文档/: ~$l大作业报告.docx  系统测试.docx  需求分析.docx
(+102 files in other folders)
